Scrape episodes, restructure folders

--- a/src/package.json
+++ b/src/package.json
@@ -2,12 +2,8 @@
   "name": "alexa-himym-episode",
   "version": "1.0.0",
   "description": "Alexa skill to choose a random How I Met Your Mother episode",
-  "main": "src/index.js",
-  "scripts": {
-    "start": "echo \"Run npm run zip to bundle this project for uploads\"",
-    "zip": "node ./scripts/zip.js",
-    "bundle": "npm run zip"
-  },
+  "main": "index.js",
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jc3m/alexa-himym-episode.git"
@@ -18,10 +14,7 @@
     "url": "https://github.com/jc3m/alexa-himym-episode/issues"
   },
   "homepage": "https://github.com/jc3m/alexa-himym-episode#readme",
-  "devDependencies": {
-    "archiver": "^2.0.0",
-    "eslint": "^4.3.0",
-    "eslint-config-airbnb-base": "^11.3.1",
-    "eslint-plugin-import": "^2.7.0"
+  "dependencies": {
+    "alexa-sdk": "^1.0.11"
   }
 }
